diesel_compile_tests/tests/ui/as_changeset_bad_column_name.stderr
error[E0412]: cannot find type `name` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:13:5
   |
13 |     name: String,
   |     ^^^^ not found in `users`

error[E0412]: cannot find type `hair_color` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:14:21
   |
14 |     #[column_name = "hair_color"]
   |                     ^^^^^^^^^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:13:5
   |
13 |     name: String,
   |     ^^^^ not found in `users`

error[E0425]: cannot find value `hair_color` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:14:21
   |
14 |     #[column_name = "hair_color"]
   |                     ^^^^^^^^^^^^ not found in `users`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:20:34
   |
20 | struct UserTuple(#[column_name = "name"] String);
   |                                  ^^^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/as_changeset_bad_column_name.rs:20:34
   |
20 | struct UserTuple(#[column_name = "name"] String);
   |                                  ^^^^^^ not found in `users`

error[E0601]: `main` function not found in crate `as_changeset_bad_column_name`
  |
  = note: consider adding a `main` function to `$DIR/as_changeset_bad_column_name.rs`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0412, E0425, E0601.
For more information about an error, try `rustc --explain E0412`.
