diesel_compile_tests/tests/ui/as_changeset_bad_column_name.rs
#[macro_use]
extern crate diesel;

table! {
    users {
        id -> Integer,
    }
}

#[derive(AsChangeset)]
#[table_name = "users"]
struct UserStruct {
    name: String,
    #[column_name = "hair_color"]
    color_de_pelo: String,
}

#[derive(AsChangeset)]
#[table_name = "users"]
struct UserTuple(#[column_name = "name"] String);

fn main() {}
